# nyx

./: .clang-format  .coveralls.yml  .gitignore  .travis.yml  Ast.h  Builtin.h  CMakeLists.txt  Debug.cpp  Debug.h  Interpreter.cpp  Interpreter.h  LICENSE  Main.cpp  Nyx.cpp  Nyx.h  NyxInterpreter.h  Parser.cpp  Parser.h  README.md  appveyor.yml  codecov.yml  conanfile.txt  reference.md  source.nyx
.circleci/: config.yml
docs/: conf.py  development.md  index.md  index.rst  reference.md
nyx/: Ast.cpp  Ast.h  Builtin.cpp  Builtin.h  Debug.cpp  Debug.hpp  Interpreter.cpp  Interpreter.h  Main.cpp  Nyx.cpp  Nyx.h  Nyx.hpp  Object.cpp  Object.hpp  Parser.cpp  Parser.h  Runtime.cpp  Runtime.hpp  Utils.cpp  Utils.h  Utils.hpp
nyx_demo/: arithmetic.nyx  builtin.nyx  condition.nyx  hello.nyx  statement.nyx  strings.nyx
nyx_test/: 9x9table.nyx  README.md  arithmetic.nyx  array.nyx  bitwise.nyx  builtin.nyx  chars.nyx  condition.nyx  function.nyx  hello.nyx  narcissistic_number.nyx  statement.nyx
nyx_test/example/: 9x9table.nyx  ast.nyx  love.nyx  narcissistic_number.nyx  quick_sort.nyx  reverse_array.nyx
nyx_test/interesting/: 9x9table.nyx  fibonacci.nyx  prime.nyx  reverse_array.nyx  yang_hui_san_jiao.nyx
nyx_test/tiresome/: arithmetic.nyx  array.nyx  assert.nyx  builtin.nyx  call_member.nyx  chars.nyx  closure.nyx  compound_assign.nyx  condition.nyx  pattern_matching.nyx  sideeffect.nyx  statement.nyx  str.nyx  stubborn.nyx
